--- a/docs/en-gb/modules/markets/partials/kaufland-recommended-mappings.adoc
+++ b/docs/en-gb/modules/markets/partials/kaufland-recommended-mappings.adoc
@@ -19,7 +19,7 @@ However, some data fields are the same in each category. Only the recommended ma
 
 | Category
 | yes
-| The Kaufland category. +
+| The Kaufland product category. +
 This data field is assigned automatically.
 
 | SKU
@@ -142,7 +142,9 @@ _or_
 
 for several images:
 
-* *Image » Variation images » Image list*, image information *Full image URL*
+* *Image » Variation images » Image list*, image information *Full image URL* +
+
+*_Note:_* Enter a *maximum number of images* for the *image list*.
 
 | Category
 | yes
