--- a/docs/de-de/modules/auftraege/pages/dokumentenarchiv.adoc
+++ b/docs/de-de/modules/auftraege/pages/dokumentenarchiv.adoc
@@ -30,7 +30,7 @@ Folgende Dokumenttypen sind im Dokumentenarchiv verfügbar:
 * xref:auftraege:auftraege-verwalten.adoc#840[Sammelrechnungen]
 * xref:auftraege:auftraege-verwalten.adoc#530[Stornobeleg Gutschriften]
 * xref:auftraege:mahnungen-erzeugen.adoc#400[Stornobeleg Mahnungen]
-* xref:auftraege:auftraege-verwalten.adoc#1670[Stornobeleg Rechnungen]
+* xref:auftraege:rechnungen-erzeugen.adoc#400[Stornobeleg Rechnungen]
 * xref:auftraege:gutscheine.adoc#[Gutscheine]
 =====
 
