--- a/docs/en-gb/modules/data/pages/exporting-payments.adoc
+++ b/docs/en-gb/modules/data/pages/exporting-payments.adoc
@@ -95,7 +95,7 @@ The following table lists all available data fields of the export format *Paymen
 [#20]
 == Adding filters
 
-In order to only export specific payments, you can select filters and thus narrow down the data. How to add filters is described in xref:data:file-export.adoc#257[this chapter].
+In order to only export specific payments, you can select filters and thus narrow down the data. How to add filters is described in xref:data:export-standard-formats.adoc#filter-data[this chapter].
 
 [#30]
 === Available filters
