--- a/docs/de-de/modules/automatisierung/pages/ereignisaktionen.adoc
+++ b/docs/de-de/modules/automatisierung/pages/ereignisaktionen.adoc
@@ -137,7 +137,7 @@ xref:auftraege:auftragsbestaetigung-erzeugen.adoc#[Auftragsbestätigung] +
 xref:auftraege:gutschriften-erzeugen.adoc#[Gutschrift] +
 xref:auftraege:korrekturbeleg-erzeugen.adoc#[Korrekturbeleg] +
 xref:auftraege:ruecksendeschein-erzeugen.adoc#[Rücksendeschein] +
-xref:auftraege:auftraege-verwalten.adoc#1670[Stornobeleg Rechnung] +
+xref:auftraege:rechnungen-erzeugen.adoc#400[Stornobeleg Rechnung] +
 xref:auftraege:auftraege-verwalten.adoc#540[Stornobeleg Gutschrift] +
 xref:auftraege:proformarechnung-erzeugen.adoc#[Proformarechnung] +
 xref:fulfillment:versand-center.adoc#retourenetikett-abrufen[Retourenlabel] +
@@ -746,7 +746,7 @@ Optional kannst du einen *Kommentar* einfügen, der auf dem Dokument unterhalb d
 |Die Aktion erzeugt ein xref:auftraege:gutscheine.adoc#intable-coupon-type[Mehrzweckgutschein] für einen Auftrag.
 
 | *Stornobeleg Rechnung erzeugen*
-|Die Aktion erzeugt einen xref:auftraege:auftraege-verwalten.adoc#1670[Stornobeleg Rechnung] für einen Auftrag. Ein Stornobeleg storniert eine Rechnung und nicht einen Auftrag. Deshalb wird der Stornobeleg nur erzeugt, wenn der Auftrag eine Rechnung hat. +
+|Die Aktion erzeugt einen xref:auftraege:rechnung-erzeugen.adoc#400[Stornobeleg Rechnung] für einen Auftrag. Ein Stornobeleg storniert eine Rechnung und nicht einen Auftrag. Deshalb wird der Stornobeleg nur erzeugt, wenn der Auftrag eine Rechnung hat. +
 Optional kannst du einen *Kommentar* einfügen, der auf dem Dokument unterhalb der Artikelpositionen eingefügt wird. +
 Entscheide in der Dropdown-Liste *Datum*, welches Datum auf dem Dokument angezeigt werden soll. Durch die Auswahl *Standard* wird das aktuelle Datum auf der Dokument ausgegeben. Durch die Auswahl *Rechnungsdatum* wird das gleiche Datum wie auf der Rechnung ausgegeben.
 
