--- a/docs/de-de/modules/daten/pages/praxisbeispiel-auftraege.adoc
+++ b/docs/de-de/modules/daten/pages/praxisbeispiel-auftraege.adoc
@@ -100,7 +100,7 @@ Wirf in diesem Zug auch noch mal einen Blick auf die xref:daten:dateiexport.adoc
 Wir haben nun einen ersten grundlegenden Katalog erstellt, der nutzbar ist. Nehmen wir an, du möchtest nun aber zusätzlich Auftragspositionsdaten exportieren. +
 Du kannst Datenfelder und Filter eines bestehenden Katalogs einfach erweitern. Wenn du aber den ursprünglichen Katalog behalten und zusätzlich einen weiteren wie diesen nur mit mehr Datenfeldern haben möchtest, kannst du einen bestehenden Katalog kopieren und dann erweitern.
 
-xref:daten:dateiexport.adoc#190[Kopiere] also den eben erstellten Katalog, damit wir die Kopie für das Beispiel erweitern können. +
+xref:daten:catalogues-manage.adoc#190[Kopiere] also den eben erstellten Katalog, damit wir die Kopie für das Beispiel erweitern können. +
 Überlege dir anschließend, welche Daten zu Auftragspositionen für dich relevant sind. Im Beispiel wollen wir die bestehenden Daten erst mal nur durch weitere wenige grundlegende Informationen ergänzen. Du kannst dies aber individuell ausweiten.
 
 - Varianten-ID = Um aufschlüsseln zu können, welche Artikel verkauft wurden.
