--- a/docs/de-de/modules/auftraege/pages/order-type-repair.adoc
+++ b/docs/de-de/modules/auftraege/pages/order-type-repair.adoc
@@ -3,7 +3,7 @@
 :keywords: Reparatur, Reparaturstatus, Zustand Reparatur
 :author: team-order-core
 
-Reparaturen werden in plentymarkets durch einen eigenen Auftragstyp abgebildet. Reparaturen bestehen aus retournierter, reparaturbedürftiger Ware. Reparaturaufträge können daher nur aus xref:auftraege:order-type-return.adoc#400[Retourenaufträgen] angelegt werden.
+Reparaturen werden in plentymarkets durch einen eigenen Auftragstyp abgebildet. Reparaturen bestehen aus retournierter, reparaturbedürftiger Ware. Reparaturaufträge können daher nur aus xref:auftraege:order-type-return.adoc#[Retourenaufträgen] angelegt werden.
 
 [#repair-statuses]
 == Status für Reparaturen anlegen
@@ -49,7 +49,7 @@ Gehe wie unten beschrieben vor, um eine Reparatur anzulegen:
 . *Speichere* (material:save[]) die Einstellungen. +
 → Die Reparatur wird angelegt.
 
-[[table-settings-return]]
+[[table-settings-repair]]
 .Einstellungen zum Erfassen einer Reparatur
 [cols="1,3"]
 |===
