ADD new order pages to navigation

--- a/docs/en-gb/modules/ROOT/nav.adoc
+++ b/docs/en-gb/modules/ROOT/nav.adoc
@@ -135,6 +135,22 @@
 ** xref:orders:coupons.adoc[Coupons]
 ** xref:orders:package-content-list.adoc[Package content list]
 ** xref:orders:document-archive.adoc[Document archive]
+** xref:orders:new-order-ui-beta.adoc[Orders (beta)]
+*** xref:orders:preparatory-settings.adoc[Preparatory settings]
+*** xref:orders:order-search.adoc[Searching for orders]
+*** xref:orders:manually-create-orders.adoc[Manually creating orders]
+*** xref:orders:design-order-view.adoc[Customising the order view]
+*** xref:orders:order-statuses.adoc[Order statuses]
+*** xref:orders:order-types.adoc[Order types]
+**** xref:orders:order-type-offer.adoc[Offer]
+**** xref:orders:order-type-warranty.adoc[Warranty]
+**** xref:orders:order-type-credit-note.adoc[Credit note]
+**** xref:orders:order-type-delivery-order.adoc[Delivery order]
+**** xref:orders:order-type-repair.adoc[Repair]
+**** xref:orders:order-type-return.adoc[Return]
+**** xref:orders:order-type-multi-order.adoc[Multi-order]
+**** xref:orders:order-type-advance-order.adoc[Advance order]
+*** xref:orders:working-with-orders.adoc[Working with orders]
 ** xref:orders:faq.adoc[FAQ]
 *** xref:orders:exceeding-delivery-threshold.adoc[What to do when you exceed a delivery threshold?]
 ** xref:orders:scheduler.adoc[Old: Scheduler]
