--- a/docs/de-de/modules/ROOT/nav.adoc
+++ b/docs/de-de/modules/ROOT/nav.adoc
@@ -140,7 +140,7 @@
 ** xref:auftraege:paketinhaltsliste.adoc[Paketinhaltsliste]
 ** xref:auftraege:dokumentenarchiv.adoc[Dokumentenarchiv]
 ** xref:auftraege:new-order-ui-beta.adoc[Aufträge (beta)]
-*** xref:auftraege:preparatory-settings.adoc[Vorbereitende Einstellungen vornehmen]
+*** xref:auftraege:preparatory-settings.adoc[Vorbereitende Einstellungen]
 *** xref:auftraege:order-search.adoc[Aufträge suchen]
 *** xref:auftraege:manually-create-orders.adoc[Aufträge manuell anlegen]
 *** xref:auftraege:design-order-view.adoc[Auftragsansicht gestalten]
