--- a/docs/de-de/modules/artikel/pages/verzeichnis.adoc
+++ b/docs/de-de/modules/artikel/pages/verzeichnis.adoc
@@ -6,7 +6,7 @@
 :manual:
 
 ////
-zuletzt bearbeitet 26.07.2022
+zuletzt bearbeitet 22.08.2022
 ////
 
 //ToDo - search for and fix comments
@@ -232,6 +232,7 @@ Zum Beispiel ordnest du das Bild des grünen T-Shirts der grünen T-Shirt-Varian
 
 ---
 
+[#42]
 [discrete]
 ==== Bilder hochladen
 
@@ -251,13 +252,9 @@ Zum Beispiel ordnest du das Bild des grünen T-Shirts der grünen T-Shirt-Varian
 --
 
 . Öffne das Menü *Artikel » Artikel-UI » [Artikel öffnen] » Linke Navigation: Bilder » Details*.
-. Klicke auf terra:upload[role="darkGrey"]. +
-→ Der Upload-Modus wird geöffnet.
 . Ziehe die Bilder per Drag-and-drop in den dafür vorgesehenen Bereich oder wähle die Bilder vom Speicherort auf dem Rechner aus.
 
 //#gif#
-
-TIP: Klicke erneut auf terra:upload[role="darkGrey"], um den Upload-Modus wieder zu verlassen.
 
 --
 
@@ -292,6 +289,7 @@ Das Quellbild muss mindestens die unter xref:artikel:bilder.adoc#500[Größen] f
 
 ---
 
+[#44]
 [discrete]
 ==== Details speichern
 
@@ -325,28 +323,6 @@ Das Quellbild muss mindestens die unter xref:artikel:bilder.adoc#500[Größen] f
 |===
 |Einstellung |Erläuterung
 
-| material:translate[role="darkGrey"]
-|Öffnet ein Fenster für Übersetzungen.
-Hier kannst du den Bildnamen und alternativen Text in mehreren Sprachen speichern.
-
-. Klicke auf material:translate[role="darkGrey"]. +
-→ Es öffnet sich das Menü *Übersetzungen*.
-. Wähle Sprachen aus den Dropdown-Listen links und rechts.
-Beispiel: die Ausgangssprache links und die Zielsprache rechts.
-. Gib Bildnamen und Alternativtexte in den gewählten Sprachen ein.
-. *Speichere* (terra:save[role="darkGrey"]) die Einstellungen.
-
-| terra:upload[role="darkGrey"]
-|Öffnet ein Fenster zum Hochladen von Bildern.
-
-. Klicke auf terra:upload[role="darkGrey"]. +
-→ Es öffnet sich ein Fenster zum Hochladen von Bildern.
-. Ziehe die Bilder per Drag-and-drop in den dafür vorgesehenen Bereich oder wähle die Bilder vom Speicherort auf dem Rechner aus.
-. *Speichere* (terra:save[role="darkGrey"]) die Einstellungen.
-
-*_Upload-Modus wieder verlassen_*:
-Klicke erneut auf terra:upload[role="darkGrey"], um den Upload-Modus zu beenden.
-
 | *URL*
 |Hier siehst du die URL des Bildes.
 Die URL kann kopiert werden.
@@ -368,9 +344,6 @@ Dadurch wird auch der Traffic der Seite erhöht, wenn das Bild zum Beispiel übe
 *_Hinweis_*:
 Der Bildname ist auf 256 Zeichen begrenzt.
 
-*_Hinweis_*:
-Klicke auf material:translate[role="darkGrey"], wenn du den Bildnamen in mehreren Sprachen speichern möchtest.
-
 | *Alternativer Text - DE*
 |Gib einen alternativen Text für das Bild ein.
 Falls ein Bild nicht angezeigt werden kann (z.B. aufgrund von Browser-Einstellungen, Firewall usw.), dann sieht der Kunde stattdessen den alternativen Text.
@@ -379,9 +352,6 @@ Er wird lediglich als Alternative zum Bild angezeigt.
 
 *_Hinweis_*:
 Der Alternativtext ist auf 256 Zeichen begrenzt.
-
-*_Hinweis_*:
-Klicke auf material:translate[role="darkGrey"], wenn du den alternativen Text in mehreren Sprachen speichern möchtest.
 
 |[#intable-availability]*Verfügbarkeit*
 |Auf welchen Vertriebskanälen soll dieses Bild erscheinen?
@@ -395,8 +365,8 @@ Das Bild wird nur für Artikelvarianten mit diesem Attributwert an Marktplätze 
 
 *_Hinweis_*: Diese Option wird nur angezeigt, wenn:
 
-* xref:artikel:artikel-verwalten.adoc#94[das Bild mit mindestens einer Variante verknüpft ist].
-* xref:artikel:artikel-verwalten.adoc#intable-availability[du die Bilder für den Marktplatz verfügbar gemacht hast].
+* xref:artikel:verzeichnis.adoc#48[das Bild mit mindestens einer Variante verknüpft ist].
+* xref:artikel:verzeichnis.adoc#44[du die Bilder für den Marktplatz verfügbar gemacht hast].
 * xref:artikel:attribute.adoc#intable-bild-link-erlauben[du Bildverknüpfungen in den Grundeinstellungen zugelassen hast].
 
 | *Größe*
@@ -405,6 +375,43 @@ Das Bild wird nur für Artikelvarianten mit diesem Attributwert an Marktplätze 
 
 ---
 
+[#46]
+[discrete]
+==== Bildname und Texte übersetzen
+
+[.collapseBox]
+.*Möglichkeit 1: Bilder-Element*
+--
+
+. Öffne das Menü *Artikel » Artikel-UI » [Artikel öffnen] » Element: Bilder*.
+. Klicke im Element auf icon:ellipsis-v[role="darkGrey"] und dann auf *Übersetzungen*. +
+→ Es öffnet sich ein Fenster für Übersetzungen.
+. Wähle Sprachen aus den Dropdown-Listen links und rechts.
+Beispiel: die Ausgangssprache links und die Zielsprache rechts.
+. Gib Bildnamen und Alternativtexte in den gewählten Sprachen ein.
+. *Speichere* (terra:save[role="darkGrey"]) die Einstellungen.
+
+//#gif#
+
+--
+
+[.collapseBox]
+.*Möglichkeit 2: Linke Navigation*
+--
+
+. Öffne das Menü *Artikel » Artikel-UI » [Artikel öffnen] » Linke Navigation: Bilder » Übersetzungen*.
+. Wähle Sprachen aus den Dropdown-Listen links und rechts.
+Beispiel: die Ausgangssprache links und die Zielsprache rechts.
+. Gib Bildnamen und Alternativtexte in den gewählten Sprachen ein.
+. *Speichere* (terra:save[role="darkGrey"]) die Einstellungen.
+
+//#gif#
+
+--
+
+---
+
+[#48]
 [discrete]
 ==== Bilder mit Varianten verknüpfen
 
@@ -470,8 +477,10 @@ Es ist aber auch möglich, variantenspezifische Texte zu speichern.
 |In welchen Sprachen möchtest du die Texte verfassen?
 Wähle die Sprachen aus den Dropdown-Listen links und rechts.
 
-*_Hinweis_*: Diese Ansicht ist für die Übersetzung von Produkttexten nützlich, da du zwei Sprachversionen nebeneinander vergleichen kannst.
-Wenn du Produkttexte in _nur einer Sprache_ verwalten möchtest, dann empfiehlt sich das Element "Texte", das sich auf der Artikel-Ebene befindet.
+*_Hinweis_*:
+Standardmäßig ist dies eine zweisprachige Ansicht mit Deutsch und Englisch.
+Du kannst die Ansicht jedoch anpassen und entscheiden, welche Sprachen du benötigst, d.h. andere Sprachen wählen oder eine einsprachige Ansicht erstellen.
+Weitere Informationen findest du im Praxisbeispiel unten.
 
 | *Name 1*
 |
@@ -1338,7 +1347,7 @@ Falls erforderlich, kannst du hier manuell weitere Kategorien mit der Variante v
 .*Weitere Kategorien verknüpfen*
 --
 
-IMPORTANT: Dies setzt voraus, dass du die nötigen xref:artikel:barcodes.adoc#100[Kategorien] bereits in plentymarkets erstellt hast.
+IMPORTANT: Dies setzt voraus, dass du die nötigen xref:artikel:kategorien.adoc#200[Kategorien] bereits in plentymarkets erstellt hast.
 
 . Öffne das Menü *Artikel » Artikel-UI » [Variante öffnen] » Element: Kategorien*.
 . Klicke im Element auf icon:ellipsis-v[role="darkGrey"] und dann auf icon:pencil[role="darkGrey"] *Kategorien wählen*. +
@@ -1360,7 +1369,7 @@ Wenn du ein Produkt im plentyShop anschaust, ist der Breadcrumbs-Pfad der Standa
 
 *_Hinweis_*: Da sich diese Einstellung auf den plentyShop bezieht und manche Verkäufer mehrere Mandanten mit plentymarkets verwalten, kannst du die Standardkategorie für jeden Mandanten einzeln festlegen.
 
-IMPORTANT: Dies setzt voraus, dass du die nötigen xref:artikel:barcodes.adoc#100[Kategorien] bereits in plentymarkets erstellt hast.
+IMPORTANT: Dies setzt voraus, dass du die nötigen xref:artikel:kategorien.adoc#200[Kategorien] bereits in plentymarkets erstellt hast.
 
 . Öffne das Menü *Artikel » Artikel-UI » [Variante öffnen] » Element: Kategorien*.
 . Klicke im Element auf icon:ellipsis-v[role="darkGrey"] und dann auf material:link[role="darkGrey"] *Standardkategorien verknüpfen*. +
@@ -1897,7 +1906,7 @@ Intern werden ausschließlich Bruttopreise in der Datenbank gespeichert.
 Wie du dieses Feld verwendest, wird im Praxisbeispiel weiter unten beschrieben.
 
 *_Hintergrund-Info_*:
-Zum 28.05.2022 tritt eine neue link:https://www.bmwk.de/Redaktion/DE/Downloads/P-R/novelle-der-preisangabenverordnung-pangv.pdf?__blob=publicationFile&v=4[Preisangabenverordnung^] in Kraft.
+Am 28.05.2022 ist eine neue link:https://www.bmwk.de/Redaktion/DE/Downloads/P-R/novelle-der-preisangabenverordnung-pangv.pdf?__blob=publicationFile&v=4[Preisangabenverordnung^] in Kraft getreten.
 In der Verordnung wird in § 11 (1) festgelegt, wie die Preise angegeben werden müssen, wenn Waren ermäßigt werden.
 |===
 
@@ -2064,7 +2073,7 @@ Das heißt, im Element *Inhalt / Dimensionen* wird zukünftig das Feld xref:arti
 Das heißt, im Element *Kosten* wird zukünftig das Feld xref:artikel:verzeichnis.adoc#190[Einkaufspreis netto] ausgegraut sein.
 
 | *Paket: Gleitenden Nettoeinkaufspreis automatisch aus Bestandteilen berechnen*
-|Der gleitende Netto-Einkaufspreis automatisch anhand der Bestandteile berechnet.
+|Der gleitende Netto-Einkaufspreis wird automatisch anhand der Bestandteile berechnet.
 Das heißt, im Element *Kosten* wird zukünftig das Feld xref:artikel:verzeichnis.adoc#190[Gleitender Durchschnittseinkaufspreis netto] ausgegraut sein.
 
 |===
@@ -2122,7 +2131,7 @@ Falls erforderlich, kannst du hier weitere Notizen hinzufügen.
 [TIP]
 .Zeichenzähler
 ====
-Unten links siehst du, wie viele Zeichen bereits eingegeben wurden und wie viele Zeichen noch verfügbar sind.
+Unten rechts siehst du, wie viele Zeichen bereits eingegeben wurden und wie viele Zeichen noch verfügbar sind.
 
 * Der Zeichenzähler färbt sich rot, wenn du die maximale Anzahl von Zeichen überschritten hast.
 Die Zeichen oberhalb des Grenzwertes werden nicht mitgespeichert.
