FIX order pages

--- a/docs/de-de/modules/auftraege/pages/working-with-orders.adoc
+++ b/docs/de-de/modules/auftraege/pages/working-with-orders.adoc
@@ -617,7 +617,7 @@ Im Bereich *Zahlungsbedingungen* siehst du die Informationen *Zahlungsziel*, *Sk
 Möchtest du Valuta und Skonto nutzen, muss ein Zahlungsziel angegeben sein. Wenn für das Zahlungsziel nichts bzw. der Wert 0 eingetragen ist, sind die Zahlungsbedingungen nicht gültig und werden nicht auf Dokumente übernommen.
 ======
 
-Wenn die Werte bereits in den xref:crm:kontakte-verwalten.adoc#300[Kontaktdaten] hinterlegt sind, werden sie vom System automatisch übernommen und hier eingetragen. Die Kontaktdaten haben somit Priorität. Ist in den Kontaktdaten nichts hinterlegt, wird als nächstes überprüft, ob die Zahlungsbedingungen in einer xref:crm:kontakte-verwalten.adoc#15[Kundenklasse] definiert sind. Falls ja, werden diese Daten übernommen und hier am Auftrag eingetragen. Sind die Werte weder in den Kontaktdaten noch in einer Kundenklasse hinterlegt, bleiben die Felder zu den Zahlungsbedingungen am Auftrag leer. +
+Wenn die Werte bereits in den xref:crm:kontakt-bearbeiten.adoc#kontakt-details[Kontaktdaten] hinterlegt sind, werden sie vom System automatisch übernommen und hier eingetragen. Die Kontaktdaten haben somit Priorität. Ist in den Kontaktdaten nichts hinterlegt, wird als nächstes überprüft, ob die Zahlungsbedingungen in einer xref:crm:vorbereitende-einstellungen.adoc#kundenklasse-erstellen[Kundenklasse] definiert sind. Falls ja, werden diese Daten übernommen und hier am Auftrag eingetragen. Sind die Werte weder in den Kontaktdaten noch in einer Kundenklasse hinterlegt, bleiben die Felder zu den Zahlungsbedingungen am Auftrag leer. +
 Am Auftrag lassen sich die Zahlungsbedingungen manuell eintragen und verändern. Dies ist unabhängig davon, woher Werte übertragen wurden oder ob keine Werte übernommen wurden. +
 Auf Dokumenten werden die Werte übernommen, die am dazugehörigen Auftrag hinterlegt sind. Beachte dazu auch die xref:auftraege:auftragsdokumente.adoc#intable-zahlungsbedingungen-dokumente[Dokumenteneinstellungen]. Die Zahlungsbedingungen werden auf den Auftragsdokumenten xref:auftraege:rechnungen-erzeugen.adoc#[Rechnung], xref:auftraege:proformarechnung-erzeugen.adoc#[Proformarechnung], xref:auftraege:auftragsbestaetigung-erzeugen.adoc#[Auftragsbestätigung] und xref:auftraege:dokument-angebot-erzeugen.adoc#[Angebot] ausgegeben. +
 *_Hinweis:_* Die Zahlungsbedingungen werden nur auf diese Dokumente übernommen, wenn es sich um einen Auftrag mit der xref:payment:kauf-auf-rechnung.adoc#[Zahlungsart Rechnung] oder der xref:payment:vorkasse.adoc#[Zahlungsart Vorkasse] handelt.
@@ -907,7 +907,7 @@ Im Bereich *Historie* siehst du eine Übersicht der getätigten Aktionen mit dem
 [#area-notes]
 === Bereich: Notizen
 
-Im Bereich *Notizen* kannst du interne Auftragsnotizen sowie Notizen von Kund:innen mit dem Erstelldatum und dem Zeitstempel einsehen. Die aktuellste Notiz wird jeweils oben angezeigt. Füge außerdem weitere Notizen hinzu (material:add[]) und bearbeite oder lösche interne Notizen über das Kontextmenü (material:vert_more[]). Notizen, die von Kund:innen stammen, können allerdings nicht bearbeitet, sondern nur gelöscht werden. Handelt es sich um Wünsche von Kund:innen, werden diese automatisch mit einem Tag versehen.
+Im Bereich *Notizen* kannst du interne Auftragsnotizen sowie Notizen von Kund:innen mit dem Erstelldatum und dem Zeitstempel einsehen. Die aktuellste Notiz wird jeweils oben angezeigt. Füge außerdem weitere Notizen hinzu (material:add[]) und bearbeite oder lösche interne Notizen über das Kontextmenü (material:more_vert[]). Notizen, die von Kund:innen stammen, können allerdings nicht bearbeitet, sondern nur gelöscht werden. Handelt es sich um Wünsche von Kund:innen, werden diese automatisch mit einem Tag versehen.
 
 [#splitting-orders]
 == Aufträge teilen
