--- a/docs/en-gb/modules/orders/pages/manually-create-orders.adoc
+++ b/docs/en-gb/modules/orders/pages/manually-create-orders.adoc
@@ -1,4 +1,4 @@
-= Creating orders manually
+= Manually creating orders
 :keywords: create orders manually, create orders from contact, manual order entry
 :author: team-order-core
 
@@ -111,7 +111,7 @@ Carrying out default settings:
 |===
 |Setting |Explanation
 
-[[#intable-default-owner]]*Default owner*
+|[[#intable-default-owner]]*Default owner*
 |Select a default owner to be preselected in the order details when creating an order or an offer. The owner is not taken from the contact data.
 
 |[#intable-default-client]*Default client*
@@ -162,7 +162,7 @@ This option is deactivated by default. If you only want to display the VAT rates
 |===
 
 [#create-order-or-offer]
-=== Creating the order or the offer
+=== Creating an order or an offer
 
 The order or the offer is created individually for a customer from the *CRM » Contacts* menu. The creation consists of three steps. As a first step, order details are entered. In the second step, order items are added and in the third step, the order is completed. First of all, select the contact for which the order or offer is to be created. To do so, proceed as follows.
 
