--- a/docs/en-gb/modules/orders/pages/order-type-repair.adoc
+++ b/docs/en-gb/modules/orders/pages/order-type-repair.adoc
@@ -49,7 +49,7 @@ Proceed as described below to create a repair:
 . *Save* (material:save[]) the settings. +
 → The repair is created.
 
-[[table-settings-return]]
+[[table-settings-repair]]
 .Settings for creating a repair
 [cols="1,3"]
 |===
