--- a/docs/en-gb/modules/orders/pages/preparatory-settings.adoc
+++ b/docs/en-gb/modules/orders/pages/preparatory-settings.adoc
@@ -85,7 +85,7 @@ Carrying out the basic settings:
 |Select which status should automatically be set for xref:orders:order-type-multi-order.adoc#[multi-orders].
 
 | [#intable-default-status-multi-credit-note]*Standard status for multi credit notes*
-|Select which status should automatically be set for xref:orders:order-type-multi-credit-note.adoc#[multi credit notes].
+|Select which status should automatically be set for xref:orders:order-type-multi-order.adoc#generate-multi-credit-note[multi credit notes].
 
 | [#intable-default-status-reversal]*Standard status for reversals*
 |Select which status should be automatically set for reversals. +
