--- a/docs/en-gb/modules/orders/pages/new-order-ui-beta.adoc
+++ b/docs/en-gb/modules/orders/pages/new-order-ui-beta.adoc
@@ -10,12 +10,12 @@ The new Order UI is now in the so-called _open beta phase_. This means that you 
 
 The *Orders » Orders (Test phase)* menu is structured as follows:
 
-image::auftraege:menu-structure-orders-en.png[]
+image::orders:menu-structure-orders-en.png[]
 
 * *Navigation*: Here you can navigate through different parts of the menu. The currently selected area (blue font) is displayed in the main window on the right. If you open several orders, order types or variations at once, they will be displayed underneath each other. Click on material:menu[] to expand or collapse the navigation bar.
 Whenever any entries are moved, removed or added, the side navigation is automatically adjusted.
-* *Toolbar*: Here you can xref:orders:working-with-orders.adoc#order-search[search for orders], xref:orders:working-with-orders.adoc#configure-columns[configure columns in the overview], set the desired amount of results per page and click through the pages with the orders. +
-If you select several orders (material:check_box[role=skyBlue]), you can also use the xref:auftraege:working-with-orders.adoc#order-group-functions[group functions].
+* *Toolbar*: Here you can xref:orders:order-search.adoc#[search for orders], xref:orders:design-order-view.adoc#configure-columns[configure columns in the overview], set the desired amount of results per page and click through the pages with the orders. +
+If you select several orders (material:check_box[role=skyBlue]), you can also use the xref:orders:working-with-orders.adoc#order-group-functions[group functions].
 * *Main window*: Here you can see whichever area is currently open.
 ** *Overview*: When you start a search, you’ll see the results in an overview.
 The overview provides information about the orders found at a glance.
