--- a/docs/en-gb/modules/orders/pages/working-with-orders.adoc
+++ b/docs/en-gb/modules/orders/pages/working-with-orders.adoc
@@ -11,7 +11,7 @@ Orders depict your sales and the business transactions connected to them. Those 
 == General information on creating orders in plentymarkets
 
 In plentymarkets, an order is automatically created when customers place orders in your online store or on one of your implemented markets. Separate orders with different order types are created for business transactions such as xref:orders:order-type-delivery-order.adoc#[delivery orders], xref:orders:order-type-return.adoc#[returns], xref:orders:order-type-credit-note.adoc#[credit notes], xref:orders:order-type-warranty.adoc#[warranties], and xref:orders:order-type-repair.adoc#[repairs]. These orders are always linked to the main orders. The order overview allows you to open and edit orders regardless of the xref:orders:order-referrer.adoc#[order referrer]. For many order types, such as xref:orders:order-type-delivery-order.adoc#[delivery orders], it makes sense to set up xref:automation:event-procedures.adoc#[event procedures] that allow you to automate part of your order processing. You will find some examples for using event procedures during order processing in the following chapters. +
-Orders that were not generated in the online store or on a market can be created xref:orders:manually-creating-orders.adoc#[manually] in your system. This can be the required for orders via telephone, email or cash sales.
+Orders that were not generated in the online store or on a market can be created xref:orders:manually-create-orders.adoc#[manually] in your system. This can be the required for orders via telephone, email or cash sales.
 
 Before processing the first orders in your plentymarkets system, adjust the xref:orders:preparatory-settings.adoc#[preparatory settings] in the *Setup » Orders » Settings* menu. Save those settings once even if you have not changed the default values.
 
@@ -91,7 +91,7 @@ On the right-hand side of the order overview, further functions are available. T
 [#order-areas]
 == Details about the individual areas
 
-All areas and their functions that are available for an order are described in the following sub-chapters. Use the xref:design-order-view:editing-mode.adoc#[editing mode] and decide which fields are displayed in a respective area. You can also define in which order the fields should be arranged. This way, you can individually design your order view and adapt it to suit your needs. Note that different fields are available, depending on the order type. As soon as you open an order, all areas will be shown in the navigation on the left-hand side. +
+All areas and their functions that are available for an order are described in the following sub-chapters. Use the xref:design-order-view.adoc#editing-mode[editing mode] and decide which fields are displayed in a respective area. You can also define in which order the fields should be arranged. This way, you can individually design your order view and adapt it to suit your needs. Note that different fields are available, depending on the order type. As soon as you open an order, all areas will be shown in the navigation on the left-hand side. +
 By clicking on an entry in the following list, you will be directly forwarded to the corresponding sub-chapter where you find further details.
 
 * <<#area-overview, Overview>>
@@ -625,7 +625,7 @@ If you want to use value date and early payment discount, you need to enter a pa
 
 If the values were already saved in the xref:crm:managing-contacts.adoc#300[contact data], they will automatically be displayed here. Thus, contact data have priority. If nothing is saved in the contact data, it is checked whether the payment terms are defined in a xref:crm:managing-contacts.adoc#15[customer class]. If this is the case, these data are entered in the order. If the values do neither exist in the contact data nor in the customer class, the fields for the payment terms remain empty. +
 In an order, the payment terms can be manually entered and edited. This is regardless of the fact where the values were taken from or whether no values were transferred. +
-Documents will show the values that are saved in the corresponding order. For this, also note the xref:orders:order-documents.adoc#intable-payment-terms-documents[document settings]. The payment terms are displayed on the order documents xref:orders:generating-invoices.adoc#[invoice], xref:orders:generating-pro-forma-invoice.adoc#[pro forma invoice], xref:orders:generationg-order-confirmation.adoc#[oder confirmation], and xref:orders:generating-offer.adoc#[offer]. +
+Documents will show the values that are saved in the corresponding order. For this, also note the xref:orders:order-documents.adoc#intable-payment-terms-documents[document settings]. The payment terms are displayed on the order documents xref:orders:generating-invoices.adoc#[invoice], xref:orders:generating-pro-forma-invoice.adoc#[pro forma invoice], xref:orders:generating-order-confirmation.adoc#[order confirmation], and xref:orders:generating-offer.adoc#[offer]. +
 *_Note:_* The payment terms will only be displayed on documents if the corresponding order was paid with the payment method xref:payment:invoice.adoc#[Invoice] or the payment method xref:payment:cash-in-advance.adoc#[Cash in advance].
 
 [[table-payment-terms]]
@@ -843,7 +843,7 @@ In the *Properties* area, you can see the properties of the order items. Via *Co
 [#area-documents]
 === Area: Documents
 
-In the *Documents* area you can see all available and archived documents of your orders. You can configure the columns (material:settings[]), create new documents (material:note_add[]) and upload external documents (material:file_upload[]).
+In the *Documents* area you can see all available and archived documents of your orders. You can configure the columns (material:settings[]), create new documents (material:add[]) and upload external documents (material:file_upload[]).
 
 [[table-documents]]
 .Settings in the Documents area
@@ -913,7 +913,7 @@ In the *History* area you get an overview of all previous actions as well as the
 [#area-notes]
 === Area: Notes
 
-In the *Notes* area you can see internal order notes as well as notes from customers with the respective date and time of the creation. The most recent note is always displayed at the top. You can also add further notes (material:add[]) and edit or delete internal notes via the context menu (material:vert_more[]). Customer notes can only be deleted, but not be edited. If there is a customer wish, a corresponding tag is automatically shown on the note.
+In the *Notes* area you can see internal order notes as well as notes from customers with the respective date and time of the creation. The most recent note is always displayed at the top. You can also add further notes (material:add[]) and edit or delete internal notes via the context menu (material:more_vert[]). Customer notes can only be deleted, but not be edited. If there is a customer wish, a corresponding tag is automatically shown on the note.
 
 [#splitting-orders]
 == Splitting orders
