--- a/docs/de-de/modules/business-entscheidungen/pages/SPoCC.adoc
+++ b/docs/de-de/modules/business-entscheidungen/pages/SPoCC.adoc
@@ -8,7 +8,8 @@
 erstellt am 28.06.2022
 Project Manager: Tina Gerber
 
-SPoCC ist - ähnlich wie Prohandel - eine Contentdatenbank inkl. WaWi. Diese wird vor allem von Schuhhändlern genutzt. Artikeldaten (Stammdaten, Eigenschaften, Bilder, Bestände, Preise) werden zu plenty importiert und Auftragsdaten an SPoCC (ehemals Apollon) exportiert. Auch der Assistent is ähnlich aufgebaut wie der von Prohandel. daher denke ich, hat man hier schon eine gute Grundlage, auf die man aufbauen kann. Hier einmal eine Übersicht, was das Plugin für Funktionalitäten hat: https://docs.google.com/presentation/d/12mym8JIQqPc1BhJEeYFlxQfGqoQC9IiBvyt1mDx3fJo/edit#slide=id.g1321ed4c3cb_0_86
+SPoCC ist - ähnlich wie Prohandel - eine Contentdatenbank inkl. WaWi. Diese wird vor allem von Schuhhändlern genutzt. Artikeldaten (Stammdaten, Eigenschaften, Bilder, Bestände, Preise) werden zu plenty importiert und Auftragsdaten an SPoCC (ehemals Apollon) exportiert. Auch der Assistent is ähnlich aufgebaut wie der von Prohandel. daher denke ich, hat man hier schon eine gute Grundlage, auf die man aufbauen kann. Hier einmal eine Übersicht, was das Plugin für Funktionalitäten hat:
+https://docs.google.com/presentation/d/12mym8JIQqPc1BhJEeYFlxQfGqoQC9IiBvyt1mDx3fJo/edit#slide=id.g1321ed4c3cb_0_86
 ////
 
 //ToDo when the page can be made visible in the left navigation - remove the attribute :page-index: false from the header and add the page to the navigation file in the ROOT folder
@@ -157,7 +158,7 @@ Einstellungen im Assistenten konfigurieren:
 . Öffne das Menü *Einrichtung » Assistenten » Plugins » [Plugin-Set öffnen]*.
 . Klicke auf *SPoCC-Assistent*.
 . Folge den Anweisungen auf dem Bildschirm.
-Informationen zu den einzelnen Schritten findest du unten dieser Anleitung.
+Informationen zu den einzelnen Schritten findest du unter dieser Anleitung.
 . Prüfe im Schritt *Zusammenfassung* deine Einstellungen noch einmal auf mögliche Fehler.
 . Wenn alle Einstellungen korrekt sind, klicke auf icon:check[role="green"] *Abschließen*. +
 → Die Einstellungen werden gespeichert.
@@ -320,7 +321,7 @@ Auf diese Weise kannst du eine nicht mehr benötigte Zuordnung löschen.
 In diesem Schritt ordnest du deine in SPoCC verwendeten Produktgruppen den Kategorien in plentymarkets zu.
 So werden deine Artikel schon in die richtigen plentymarkets Kategorien einsortiert, wenn sie von SPoCC importiert werden.
 
-*_Wichtig:_* Artikel in SPoCC-Kategorien, die du in diesem Schritt nicht zugeordnet hast, werden in die Kategorie einsortiert, die du im Schritt *Optionen des Artikelimports* als Standardkategorie gewählt hast.
+*_Wichtig:_* Artikel in SPoCC-Kategorien, die du in diesem Schritt nicht zugeordnet hast, werden in eine Standardkategorie einsortiert. Diese Standardkategorie wählst du im Schritt *Optionen des Artikelimports*.
 
 [[table-category-mapping]]
 .Zuordnung der Kategorien
