--- a/docs/en-gb/modules/ROOT/nav.adoc
+++ b/docs/en-gb/modules/ROOT/nav.adoc
@@ -61,6 +61,7 @@
 *** xref:item:item-search.adoc[Searching for items]
 *** xref:item:manually-create-item.adoc[Manually creating items and variations]
 *** xref:item:detail-view.adoc[Detail view: Design]
+*** xref:item:directory.adoc[Detail view: Directory of data fields]
 *** xref:item:group-functions.adoc[Mass processing]
 * xref:stock-management:stock.adoc[Stock]
 ** xref:stock-management:preparation.adoc[Preparatory settings]
