ADD 2 new default templates

--- a/docs/en-gb/modules/crm/pages/emailbuilder.adoc
+++ b/docs/en-gb/modules/crm/pages/emailbuilder.adoc
@@ -624,6 +624,12 @@ Would you like to know which default templates are already available in the Emai
 |Order: Payment complete
 |Payment for order ID &#123;&#8288;&#123;order.id&#125;&#8288;&#125; fully received
 
+|Order: Payment reminder
+|Payment status for the order placed on &#123;&#8288;&#123;order.formattedDates.createdOn \| date('m-d-Y H:i:s')&#125;&#8288;&#125; with order ID &#123;&#8288;&#123;order.id&#125;&#8288;&#125;
+
+|Order: Invoice
+|Invoice for order ID: &#123;&#8288;&#123;order.id&#125;&#8288;&#125; from &#123;&#8288;&#123;order.formattedDates.createdOn \| date('m-d-Y H:i:s')&#125;&#8288;&#125;
+
 |eBay: dispute / cancellation, no payment
 |Your order with the ID &#123;&#8288;&#123;order.id&#125;&#8288;&#125; was cancelled
 
@@ -663,6 +669,12 @@ Would you like to know which default templates are already available in the Emai
 
 |Auftrag: Zahlungseingang vollständig
 |Zahlung für Auftrag &#123;&#8288;&#123;order.id&#125;&#8288;&#125; vollständig erhalten
+
+|Auftrag: Zahlungserinnerung
+|Zahlungsstatus für den Auftrag mit der ID &#123;&#8288;&#123;order.id&#125;&#8288;&#125; vom &#123;&#8288;&#123;order.formattedDates.createdOn \| date('m-d-Y H:i:s')&#125;&#8288;&#125;
+
+|Auftrag: Rechnung PDF-Anhang
+|Rechnung zu Order-ID &#123;&#8288;&#123;order.id&#125;&#8288;&#125; vom &#123;&#8288;&#123;order.formattedDates.createdOn \| date('m-d-Y H:i:s')&#125;&#8288;&#125;
 
 |eBay: Disput / Storno, keine Zahlung
 |Ihre Bestellung mit der ID &#123;&#8288;&#123;order.id&#125;&#8288;&#125; wurde storniert
