--- a/docs/de-de/modules/auftraege/pages/order-search.adoc
+++ b/docs/de-de/modules/auftraege/pages/order-search.adoc
@@ -141,21 +141,21 @@ a|Wähle einen Zahlungsstatus aus der Dropdown-Liste, um nach Aufträgen mit die
 | *Hauptauftrag ausschließen*
 a|Lege über die Dropdown-Liste fest, ob bei der Suche auch Hauptaufträge mit ausgegeben werden sollen oder nicht. Dies bezieht sich z.B. auf die Suche von Lieferaufträgen. Die folgenden Optionen stehen dir zur Verfügung. +
 
-* *leere Option* = ALLE +
+* *leere Option* = ALLE (Es wird nach allen Aufträgen gesucht.) +
 * *Ja* = Es werden keine Hauptaufträge in den Ergebnissen ausgegeben. +
 * *Nein* = Hauptaufträge werden in den Ergebnissen auch ausgegeben.
 
 | *Express-Lieferung*
 a|Lege über die Dropdown-Liste fest, ob du nach Aufträgen suchen möchtest, deren Lieferung als Express-Lieferung versendet werden soll. Die folgenden Optionen stehen zur Verfügung. +
 
-* *leere Option* = ALLE +
+* *leere Option* = ALLE (Es wird nach allen Aufträgen gesucht.) +
 * *Ja* = Die Lieferung wurde als Express-Lieferung versendet. +
 * *Nein* = Die Lieferung wurde nicht als Express-Lieferung versendet.
 
 | *Gültige Rechnung*
 a|Lege über die Dropdown-Liste fest, ob du nach Aufträgen mit einer gültigen Rechnung suchen möchtest. Die folgenden Optionen stehen zur Verfügung. +
 
-* *leere Option* = ALLE +
+* *leere Option* = ALLE (Es wird nach allen Aufträgen gesucht.) +
 * *Ja* = Es wird nur nach Aufträgen mit gültigen Rechnungen gesucht. +
 * *Nein* = Es wird nur nach Aufträgen mit nicht gültigen Rechnungen gesucht.
 
@@ -171,7 +171,7 @@ a|Lege über die Dropdown-Liste fest, ob du nach Aufträgen mit einer gültigen 
 | *Storniert*
 a|Lege über die Dropdown-Liste fest, ob du nach einem stornierten oder nach einem nicht stornierten Auftrag suchen möchtest. Die folgenden Optionen stehen dir zur Verfügung. +
 
-* *leere Option* = ALLE +
+* *leere Option* = ALLE (Es wird nach allen Aufträgen gesucht.) +
 * *Ja* = Es wird nur nach stornierten Aufträgen gesucht. +
 * *Nein* = Es wird nur nach nicht stornierten Aufträgen gesucht.
 
@@ -243,7 +243,7 @@ a|Lege über die Dropdown-Liste fest, ob du nach einem stornierten oder nach ein
 | *Packstation*
 a|Lege über die Dropdown-Liste fest, ob nach Aufträgen gesucht werden soll, die an eine Packstation geliefert werden. Die folgenden Optionen stehen dir zur Verfügung: +
 
-* *leere Option* = ALLE +
+* *leere Option* = ALLE (Es wird nach allen Aufträgen gesucht.) +
 * *Ja* = Es wird nach Aufträgen mit einer Packstation gesucht. +
 * *Nein* = Es wird nach Aufträgen ohne Packstation gesucht.
 
@@ -255,11 +255,11 @@ a|Lege über die Dropdown-Liste fest, ob nach Aufträgen gesucht werden soll, di
 | *eBay Plus*
 a|Lege über die Dropdown-Liste fest, ob du nach Aufträgen mit eBay Plus suchen möchtest. Die folgenden Optionen stehen dir zur Verfügung: +
 
-* *leere Option* = ALLE
+* *leere Option* = ALLE (Es wird nach allen Aufträgen gesucht.) +
 * *Ja* = Es wird nur nach Aufträgen mit eBay Plus gesucht.
 * *Nein* = Es wird nur nach Aufträgen ohne eBay Plus gesucht.
 
-| *Herkunft*
+| *Auftragsherkunft*
 |Wähle eine oder mehrere Herkünfte aus der Dropdown-Liste, um nach Aufträgen mit dieser Herkunft zu suchen. Die Option *0* steht für die manuelle Eingabe.
 
 | *Amazon*
