--- a/docs/en-gb/modules/data/pages/exporting-payments.adoc
+++ b/docs/en-gb/modules/data/pages/exporting-payments.adoc
@@ -26,7 +26,7 @@ The export format *Payments* is a so-called standard format, which you can use t
 ====
 To the left of newly added data fields, you can enter an *Export key*. The export key is the name under which the values of a data field are grouped in your export file. The export keys can be adapted. +
 Always make sure that the export key is unique especially when you add the same data field several times and select different options. If the same export key is used more than once only the data field which was added last with this export key is exported. +
-Find more information on data fields in general in the manual chapter <<data/exporting-data/file-export#add-fields, Adding data fields to export>>.
+Find more information on data fields in general in the manual chapter xref:data:export-standard-formats.adoc#add-fields[Adding data fields to export].
 ====
 
 
